objects/Invoice_Review__c.object
<CustomObject>
    <fields>
        <fullName>Accounting_Comments__c</fullName>
        <label>Accounting Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Accounting_Details_Provided__c</fullName>
        <label>Accounting Details Provided</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Not Required</fullName>
                </value>
                <value>
                    <fullName>Pending with CI/CR</fullName>
                </value>
                <value>
                    <fullName>Pending with Sales</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Accounting_Error__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Accounting Error</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Billing_Schedule__c</fullName>
        <label>Billing Schedule</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>STANDARD</fullName>
                </value>
                <value>
                    <fullName>CUSTOM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CI_Error__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CI Error</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CR_Error__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CR Error</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cancellation_Lanyon_Event_Error__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cancellation/Lanyon Event Error</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract_Processor__c</fullName>
        <label>Contract Processor</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Vishal Sharma</fullName>
                </value>
                <value>
                    <fullName>Amrita Kaur</fullName>
                </value>
                <value>
                    <fullName>Pradeep Deoli</fullName>
                </value>
                <value>
                    <fullName>Zainul Islam</fullName>
                </value>
                <value>
                    <fullName>Vishav Garg</fullName>
                </value>
                <value>
                    <fullName>Mohd Suhail</fullName>
                </value>
                <value>
                    <fullName>Anurag Singh</fullName>
                </value>
                <value>
                    <fullName>Kritika Singh</fullName>
                </value>
                <value>
                    <fullName>Abhishek Sharma</fullName>
                </value>
                <value>
                    <fullName>Prachi Tanwar</fullName>
                </value>
                <value>
                    <fullName>Swati Gautam</fullName>
                </value>
                <value>
                    <fullName>Tushar Vats</fullName>
                </value>
                <value>
                    <fullName>Ankit Pandey</fullName>
                </value>
                <value>
                    <fullName>Ashish Babbar</fullName>
                </value>
                <value>
                    <fullName>Kritika Chaturvedi</fullName>
                </value>
                <value>
                    <fullName>Samridhi Rathi</fullName>
                </value>
                <value>
                    <fullName>Deepika Kumari</fullName>
                </value>
                <value>
                    <fullName>Jishnu Roy</fullName>
                </value>
                <value>
                    <fullName>Payal Sharma</fullName>
                </value>
                <value>
                    <fullName>Virender Yadav</fullName>
                </value>
                <value>
                    <fullName>Aman Saxena</fullName>
                </value>
                <value>
                    <fullName>Meenu Garg</fullName>
                </value>
                <value>
                    <fullName>Kanchan Sharma</fullName>
                </value>
                <value>
                    <fullName>Gaurav Keshri</fullName>
                </value>
                <value>
                    <fullName>Khushbu Gupta</fullName>
                </value>
                <value>
                    <fullName>Shinku Mishra</fullName>
                </value>
                <value>
                    <fullName>Mayank Jain</fullName>
                </value>
                <value>
                    <fullName>Himanshu Singh</fullName>
                </value>
                <value>
                    <fullName>Akshay Sachdeva</fullName>
                </value>
                <value>
                    <fullName>Prashant Sethi</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Count_of_Orders__c</fullName>
        <label>Count of Orders</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Do_Not_Send_Invoice_OrderType_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Send Invoice (OrderType Override)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Document_Date__c</fullName>
        <label>Document Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Error_Category__c</fullName>
        <label>Error Category</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Incorrect Product, Quantity, Unit Price</fullName>
                </value>
                <value>
                    <fullName>Incorrect scheduling</fullName>
                </value>
                <value>
                    <fullName>Incorrect Billing Note</fullName>
                </value>
                <value>
                    <fullName>SF-EBS Integration (Technical Issue)</fullName>
                </value>
                <value>
                    <fullName>Incorrect Ship to address</fullName>
                </value>
                <value>
                    <fullName>Incorrect Billing POC</fullName>
                </value>
                <value>
                    <fullName>Incorrect Bill to address</fullName>
                </value>
                <value>
                    <fullName>Credit not applied</fullName>
                </value>
                <value>
                    <fullName>Document not attached in email</fullName>
                </value>
                <value>
                    <fullName>Incorrect Contract#</fullName>
                </value>
                <value>
                    <fullName>Start Date incorrect</fullName>
                </value>
                <value>
                    <fullName>Unit price not hidden</fullName>
                </value>
                <value>
                    <fullName>Net Term Incorrect</fullName>
                </value>
                <value>
                    <fullName>Do not send (EBS)</fullName>
                </value>
                <value>
                    <fullName>Incorrect Billing Header</fullName>
                </value>
                <value>
                    <fullName>Incorrect Billing Schedule</fullName>
                </value>
                <value>
                    <fullName>Bill to company Name</fullName>
                </value>
                <value>
                    <fullName>Invoicing Instrucions not Followed</fullName>
                </value>
                <value>
                    <fullName>Invoice to reflect as per contract copy</fullName>
                </value>
                <value>
                    <fullName>Invoice not uploaded</fullName>
                </value>
                <value>
                    <fullName>PO Incorrect</fullName>
                </value>
                <value>
                    <fullName>Federal Tax id not updated</fullName>
                </value>
                <value>
                    <fullName>Sales approval not attached</fullName>
                </value>
                <value>
                    <fullName>E-mail Draft incorrect</fullName>
                </value>
                <value>
                    <fullName>Invoicing - Not send to EBS</fullName>
                </value>
                <value>
                    <fullName>Invoicing - Account name</fullName>
                </value>
                <value>
                    <fullName>Do Not Send Invoice (OrderType Override)</fullName>
                </value>
                <value>
                    <fullName># of Events - Incorrect</fullName>
                    <isActive>false</isActive>
                    <label># of Events - Incorrect</label>
                </value>
                <value>
                    <fullName># of Leads Purchased - Incorrect</fullName>
                    <isActive>false</isActive>
                    <label># of Leads Purchased - Incorrect</label>
                </value>
                <value>
                    <fullName># of Mobile Apps - Incorrect</fullName>
                    <isActive>false</isActive>
                    <label># of Mobile Apps - Incorrect</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Error_Corrected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Error Corrected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Error_Source__c</fullName>
        <label>Error Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Data Input Error</fullName>
                </value>
                <value>
                    <fullName>SF-EBS Integration</fullName>
                </value>
                <value>
                    <fullName>Manual Intervention</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FCS_error__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FCS error</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Final_Invoice_review_Ok_Date_Time__c</fullName>
        <label>Final Invoice review Ok? Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Instalment_Billing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Instalment Billing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invoice_Category__c</fullName>
        <label>Invoice Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Automated</fullName>
                </value>
                <value>
                    <fullName>Custom Billing</fullName>
                </value>
                <value>
                    <fullName>No Print</fullName>
                </value>
                <value>
                    <fullName>Installment Billing</fullName>
                </value>
                <value>
                    <fullName>Auto Renew Invoice</fullName>
                </value>
                <value>
                    <fullName>Out of CM Scope</fullName>
                </value>
                <value>
                    <fullName>Not to be raised</fullName>
                </value>
                <value>
                    <fullName>SC</fullName>
                </value>
                <value>
                    <fullName>AR Upload</fullName>
                </value>
                <value>
                    <fullName>Order Upload</fullName>
                </value>
                <value>
                    <fullName>GSA Invoice</fullName>
                </value>
                <value>
                    <fullName>Lanyon Event</fullName>
                </value>
                <value>
                    <fullName>Uploads</fullName>
                    <isActive>false</isActive>
                    <label>Uploads</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Invoice_Not_To_be_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Invoice Not To be Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invoice_Processed_Date_Time__c</fullName>
        <label>Invoice Processed Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Invoice_Processing_Time__c</fullName>
        <label>Invoice Processing Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Processor_Comments__c</fullName>
        <label>Invoice Processor Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Review_Ok__c</fullName>
        <label>Invoice Review Ok?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Not To be Sent</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Error Corrected</fullName>
                </value>
                <value>
                    <fullName>Not to be raised</fullName>
                </value>
                <value>
                    <fullName>Non-Sample</fullName>
                </value>
                <value>
                    <fullName>Cancellation processed</fullName>
                </value>
                <value>
                    <fullName>Cancellation to be processed</fullName>
                </value>
                <value>
                    <fullName>Out of CM Scope</fullName>
                </value>
                <value>
                    <fullName>Credit/Payment applied Inv not to be sent</fullName>
                </value>
                <value>
                    <fullName>Upload to be processed</fullName>
                </value>
                <value>
                    <fullName>Portal Upload to be processed</fullName>
                </value>
                <value>
                    <fullName>Yes (Sales review required)</fullName>
                </value>
                <value>
                    <fullName>No(Implementation Error)</fullName>
                </value>
                <value>
                    <fullName>Implementation Error Corrected</fullName>
                </value>
                <value>
                    <fullName>Payment to be applied by Cashapps</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Invoice_Sent_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice Sent Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Invoice Reviews</relationshipLabel>
        <relationshipName>Invoice_Reviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Invoice_Sent_Date__c</fullName>
        <label>Invoice Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Sent_Hash__c</fullName>
        <label>Invoice Sent#</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SC scheduled/Invoice Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invoice_Status__c</fullName>
        <label>Invoice Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending with Sales</fullName>
                </value>
                <value>
                    <fullName>Escalated to Sales</fullName>
                </value>
                <value>
                    <fullName>Pending with Cancellations</fullName>
                </value>
                <value>
                    <fullName>Pending with Cash Apps</fullName>
                </value>
                <value>
                    <fullName>Pending with CI</fullName>
                </value>
                <value>
                    <fullName>Pending with CR</fullName>
                </value>
                <value>
                    <fullName>Pending with FCS</fullName>
                </value>
                <value>
                    <fullName>Pending with Accounting</fullName>
                </value>
                <value>
                    <fullName>Pending with Receivables</fullName>
                </value>
                <value>
                    <fullName>On hold from Sales</fullName>
                </value>
                <value>
                    <fullName>Leadership Approval Awaited</fullName>
                </value>
                <value>
                    <fullName>Cancellation to be processed</fullName>
                </value>
                <value>
                    <fullName>Cancellation Processed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Invoice_processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Invoice processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invoice_processer_name__c</fullName>
        <label>Invoice processer name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bharti Banyal</fullName>
                </value>
                <value>
                    <fullName>Nitin Grover</fullName>
                </value>
                <value>
                    <fullName>Mohd Alam</fullName>
                </value>
                <value>
                    <fullName>Shweta Sharma</fullName>
                </value>
                <value>
                    <fullName>Tauseef Shagoo</fullName>
                </value>
                <value>
                    <fullName>Manoj Kumar</fullName>
                </value>
                <value>
                    <fullName>Prakash Mishra</fullName>
                </value>
                <value>
                    <fullName>Vishal Sharma</fullName>
                </value>
                <value>
                    <fullName>Vishav Garg</fullName>
                </value>
                <value>
                    <fullName>Prachi Tanwar</fullName>
                </value>
                <value>
                    <fullName>Anurag Singh</fullName>
                </value>
                <value>
                    <fullName>Swati Gautam</fullName>
                </value>
                <value>
                    <fullName>Kritika Singh</fullName>
                </value>
                <value>
                    <fullName>Abhishek Sharma</fullName>
                </value>
                <value>
                    <fullName>Mohd Suhail</fullName>
                </value>
                <value>
                    <fullName>Payal Shree</fullName>
                </value>
                <value>
                    <fullName>Sweta Nanda</fullName>
                </value>
                <value>
                    <fullName>Pradeep Deoli</fullName>
                </value>
                <value>
                    <fullName>Amrita Kaur</fullName>
                </value>
                <value>
                    <fullName>Inactive Resource</fullName>
                </value>
                <value>
                    <fullName>Meenu Garg</fullName>
                </value>
                <value>
                    <fullName>Prashant Sethi</fullName>
                </value>
                <value>
                    <fullName>Aman Saxena</fullName>
                </value>
                <value>
                    <fullName>Shinku Mishra</fullName>
                </value>
                <value>
                    <fullName>Khushbu Gupta</fullName>
                </value>
                <value>
                    <fullName>Himanshu Singh</fullName>
                </value>
                <value>
                    <fullName>Aastha Malhotra</fullName>
                </value>
                <value>
                    <fullName>Deepika Kumari</fullName>
                </value>
                <value>
                    <fullName>Ankit Pandey</fullName>
                </value>
                <value>
                    <fullName>Mayank Jain</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Invoice_review_Ok_Date_Time__c</fullName>
        <label>First Invoice review Ok? Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Invoice_sent_month__c</fullName>
        <label>Invoice sent month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoicing_Comments__c</fullName>
        <label>Invoicing Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Invoicing_Error__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Invoicing Error</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invoicing_QA_Comments__c</fullName>
        <label>Invoicing QA Comments</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Invoicing_QA_name__c</fullName>
        <label>Invoicing QA name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Varun Kumar</fullName>
                </value>
                <value>
                    <fullName>Vishav Garg</fullName>
                </value>
                <value>
                    <fullName>Vishal Sharma</fullName>
                </value>
                <value>
                    <fullName>Prachi Tanwar</fullName>
                </value>
                <value>
                    <fullName>Kritika Singh</fullName>
                </value>
                <value>
                    <fullName>Sweta Nanda</fullName>
                </value>
                <value>
                    <fullName>Amrita Kaur</fullName>
                </value>
                <value>
                    <fullName>Pradeep Deoli</fullName>
                </value>
                <value>
                    <fullName>Anurag Singh</fullName>
                </value>
                <value>
                    <fullName>Mohd Suhail</fullName>
                </value>
                <value>
                    <fullName>Zainul Islam</fullName>
                </value>
                <value>
                    <fullName>Out of QC Sample</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MSA_Code__c</fullName>
        <label>MSA Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_Marked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Marked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_Print_Reason__c</fullName>
        <label>No Print Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Attachment Required</fullName>
                </value>
                <value>
                    <fullName>Clubbed Invoices Required</fullName>
                </value>
                <value>
                    <fullName>Credit Adjustment</fullName>
                </value>
                <value>
                    <fullName>Invoice Already Sent</fullName>
                </value>
                <value>
                    <fullName>Invoice to Reflect Contract Copy</fullName>
                </value>
                <value>
                    <fullName>Invoice to reflect Amount in 2 currencies</fullName>
                </value>
                <value>
                    <fullName>Lanyon Event</fullName>
                </value>
                <value>
                    <fullName>MSA Invoices</fullName>
                </value>
                <value>
                    <fullName>Payment Already Received</fullName>
                </value>
                <value>
                    <fullName>To be Reviewed by Sales/Collections</fullName>
                </value>
                <value>
                    <fullName>To be uploaded - PO# is available</fullName>
                </value>
                <value>
                    <fullName>Upfront for All Years</fullName>
                </value>
                <value>
                    <fullName>More than 1 person to be CC’d</fullName>
                </value>
                <value>
                    <fullName>Period of Invoice to be included</fullName>
                </value>
                <value>
                    <fullName>Hilton Match Fund</fullName>
                </value>
                <value>
                    <fullName>To be uploaded - PO# is not available</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Not_Sent_to_EBS_Reason__c</fullName>
        <label>Not Sent to EBS Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Barter</fullName>
                </value>
                <value>
                    <fullName>CW- DNS - Multiple Bill To/Ship To</fullName>
                </value>
                <value>
                    <fullName>Adjustment Opp - Not To Be Raised</fullName>
                </value>
                <value>
                    <fullName>Lanyon Event</fullName>
                </value>
                <value>
                    <fullName>RegOnline</fullName>
                </value>
                <value>
                    <fullName>Cancellation/Reflag</fullName>
                </value>
                <value>
                    <fullName>$0 Deal</fullName>
                </value>
                <value>
                    <fullName>CW - DNS - Property Contribution &amp; AR - Brand Contribution</fullName>
                </value>
                <value>
                    <fullName>AR - Above Property Upload</fullName>
                </value>
                <value>
                    <fullName>Legal Hold</fullName>
                </value>
                <value>
                    <fullName>GSA Invoice</fullName>
                </value>
                <value>
                    <fullName>Already billed from GP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Invoice Reviews</relationshipLabel>
        <relationshipName>Invoice_Reviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Original_Invoice_sent_month__c</fullName>
        <label>Original Invoice month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Process_Lead_QA__c</fullName>
        <label>Process Lead QA</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Gaurav Manocha</fullName>
                </value>
                <value>
                    <fullName>Prakash Mishra</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Process_Lead_Quality_feedback__c</fullName>
        <label>Process Lead Quality feedback</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Processor_Review_Ok__c</fullName>
        <label>Processor Review Ok?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <isActive>false</isActive>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reviewer_Error_Stakeholders__c</fullName>
        <label>Reviewer Error-Stakeholders</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Incorrect Product, Quantity, Unit Price</fullName>
                </value>
                <value>
                    <fullName>Incorrect scheduling</fullName>
                </value>
                <value>
                    <fullName>Incorrect Billing Note</fullName>
                </value>
                <value>
                    <fullName>SF-EBS Integration (Technical Issue)</fullName>
                </value>
                <value>
                    <fullName>Incorrect Ship to address</fullName>
                </value>
                <value>
                    <fullName>Incorrect Billing POC</fullName>
                </value>
                <value>
                    <fullName>Incorrect Bill to address</fullName>
                </value>
                <value>
                    <fullName>Credit not applied</fullName>
                </value>
                <value>
                    <fullName>Document not attached in email</fullName>
                </value>
                <value>
                    <fullName>Incorrect Contract#</fullName>
                </value>
                <value>
                    <fullName>Start Date incorrect</fullName>
                </value>
                <value>
                    <fullName>Unit price not hidden</fullName>
                </value>
                <value>
                    <fullName>Net Term Incorrect</fullName>
                </value>
                <value>
                    <fullName>Do not send (EBS)</fullName>
                </value>
                <value>
                    <fullName>Incorrect Billing Header</fullName>
                </value>
                <value>
                    <fullName>Incorrect Billing Schedule</fullName>
                </value>
                <value>
                    <fullName>Bill to company Name</fullName>
                </value>
                <value>
                    <fullName>Invoicing Instrucions not Followed</fullName>
                </value>
                <value>
                    <fullName>Invoice to reflect as per contract copy</fullName>
                </value>
                <value>
                    <fullName>Invoice not uploaded</fullName>
                </value>
                <value>
                    <fullName>PO Incorrect</fullName>
                </value>
                <value>
                    <fullName>Federal Tax id not updated</fullName>
                </value>
                <value>
                    <fullName>Sales approval not attached</fullName>
                </value>
                <value>
                    <fullName>E-mail Draft incorrect</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>